[gd_scene load_steps=5 format=2]

[ext_resource path="res://world/DungeonMap.gd" type="Script" id=1]
[ext_resource path="res://world/DungeonZoom.gd" type="Script" id=2]
[ext_resource path="res://TileSetIso.tres" type="TileSet" id=3]
[ext_resource path="res://new_tileset.tres" type="TileSet" id=4]

[node name="DungeonMap" type="Node2D"]
position = Vector2( 640, -320 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="LevelMap" type="Node2D" parent="Map"]

[node name="FloorMap" type="TileMap" parent="Map/LevelMap"]
mode = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 32 )
format = 1
tile_data = PoolIntArray( 1114134, 2, 0, 1114135, 2, 0, 1114136, 2, 0, 1179669, 2, 0, 1179670, 2, 0, 1179671, 2, 0, 1179672, 2, 0, 1179673, 2, 0, 1179674, 2, 0, 1245205, 2, 0, 1245206, 2, 0, 1245207, 2, 0, 1245208, 2, 0, 1245209, 2, 0, 1245210, 2, 0, 1310738, 5, 0, 1310739, 5, 0, 1310740, 5, 0, 1310741, 6, 0, 1310742, 4, 0, 1310743, 2, 0, 1310744, 2, 0, 1310745, 2, 0, 1310746, 2, 0, 1376273, 3, 0, 1376274, 5, 0, 1376275, 5, 0, 1376276, 6, 0, 1376277, 6, 0, 1376278, 6, 0, 1376279, 4, 0, 1376280, 2, 0, 1376281, 1, 0, 1376282, 1, 0, 1376283, 1, 0, 1376284, 1, 0, 1376285, 0, 0, 1441809, 3, 0, 1441810, 5, 0, 1441811, 6, 0, 1441812, 6, 0, 1441813, 6, 0, 1441814, 6, 0, 1441815, 4, 0, 1441816, 7, 0, 1441817, 7, 0, 1441818, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 0, 0, 1441822, 0, 0, 1507345, 3, 0, 1507346, 5, 0, 1507347, 6, 0, 1507348, 6, 0, 1507349, 6, 0, 1507350, 6, 0, 1507351, 4, 0, 1507352, 7, 0, 1507353, 7, 0, 1507354, 1, 0, 1507355, 1, 0, 1507356, 1, 0, 1507357, 0, 0, 1507358, 0, 0, 1507360, 0, 0, 1572881, 3, 0, 1572882, 6, 0, 1572883, 6, 0, 1572884, 0, 0, 1572885, 4, 0, 1572886, 4, 0, 1572887, 4, 0, 1572888, 7, 0, 1572889, 1, 0, 1572890, 1, 0, 1572891, 1, 0, 1572892, 1, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1638417, 3, 0, 1638418, 3, 0, 1638419, 4, 0, 1638420, 4, 0, 1638421, 4, 0, 1638422, 4, 0, 1638423, 5, 0, 1638424, 1, 0, 1638425, 1, 0, 1638426, 1, 0, 1638427, 1, 0, 1638428, 0, 0, 1638429, 0, 0, 1638430, 0, 0, 1638431, 0, 0, 1703953, 3, 0, 1703954, 3, 0, 1703955, 3, 0, 1703956, 4, 0, 1703957, 4, 0, 1703958, 4, 0, 1703959, 5, 0, 1703960, 5, 0, 1703961, 5, 0, 1703962, 1, 0, 1703963, 1, 0, 1703964, 0, 0, 1703965, 0, 0, 1703966, 0, 0, 1769489, 3, 0, 1769490, 3, 0, 1769491, 3, 0, 1769492, 3, 0, 1769493, 5, 0, 1769494, 5, 0, 1769495, 5, 0, 1769496, 5, 0, 1769497, 5, 0, 1769498, 5, 0, 1769499, 5, 0, 1769500, 0, 0, 1769501, 0, 0, 1769502, 0, 0, 1835026, 3, 0, 1835027, 3, 0, 1835028, 3, 0, 1835029, 3, 0, 1835030, 3, 0, 1835031, 5, 0, 1835032, 5, 0, 1835033, 5, 0, 1835034, 5, 0, 1835035, 5, 0, 1835036, 0, 0, 1835037, 0, 0, 1835038, 0, 0, 1900565, 3, 0, 1900566, 3, 0, 1900568, 5, 0, 1900569, 0, 0, 1900570, 0, 0, 1900571, 0, 0, 1900572, 0, 0, 1900573, 0, 0, 1966104, 0, 0, 1966105, 0, 0, 1966106, 0, 0, 1966107, 0, 0, 1966108, 0, 0, 2031640, 0, 0, 2031641, 0, 0, 2031642, 0, 0 )

[node name="WallMap" type="TileMap" parent="Map/LevelMap"]
mode = 1
cell_size = Vector2( 64, 32 )
format = 1

[node name="DecorMap" type="TileMap" parent="Map/LevelMap"]
mode = 1
cell_size = Vector2( 64, 32 )
format = 1

[node name="CeilingMap" type="TileMap" parent="Map/LevelMap"]
mode = 1
cell_size = Vector2( 64, 32 )
format = 1

[node name="HighlightMap" type="TileMap" parent="Map"]
mode = 1
tile_set = ExtResource( 4 )
cell_size = Vector2( 64, 32 )
format = 1

[node name="FogOfWarMap" type="TileMap" parent="Map"]
mode = 1
cell_size = Vector2( 64, 32 )
format = 1

